2008-07-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Improve reset on <.
	  Expose state tag consts for subclasses to use.
	* MonoDevelop.Xml.StateEngine/XDom.cs: Rename AttributeCollection to
	  XAttributeCollection.

2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs: Make sure that
	  bad nodes are attached, ended and popped when we recover.

2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs: Copy the stringbuilder when
	  cloning the parser.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs: Fix start locations.
	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XDom.cs: Make it possible to clone
	  parser and switch it into tree mode. Some general cloning fixes.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/State.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs,
	  MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs,
	  MonoDevelop.Xml.StateEngine/XmlNameState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs: New XML parser.
	  Currently only used (in subclassed form) by ASP.NET code completion
	  engine.
	* MonoDevelop.Xml.StateEngine/CDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs,